--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 
     <title>Odin Recipes | Homepage</title>
 
-    <link rel="stylesheet" href="">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
     <ul>
         <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
-        <li><a href="recipes/garlicnoodles.html">Garlic Chili Oil Noodles</a><li>
-        <li><a href="recipes/brownies.html"></a></li>
+        <li><a href="recipes/garlicnoodles.html">Garlic Chili Oil Noodles</a></li>
+        <li><a href="recipes/brownies.html">Easy Fudgy Cocoa Brownies</a></li>
     </ul>
+    
 </body>
 </html>
